# playground-racegame

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/: glad.c
shaders/: DebugShader.frag  DebugShader.vert  DefaultShader.frag  DefaultShader.vert  SkyShader.frag  SkyShader.vert
src/: CameraMovement.h  Terrain.h  main.cpp
src/engine/: Engine.cpp  Engine.h
src/engine/ecs/: ComponentArray.h  ComponentManager.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.h  Types.h
src/engine/imgui/: ImGuiManager.cpp  ImGuiManager.h  UIObject.h  Widget.h
src/engine/input/: InputManager.cpp  InputManager.h
src/engine/math/: Noise.cpp  Noise.h
src/engine/observer/: Observer.h  Subject.h  Updatable.h
src/engine/render/: RenderManager.cpp  RenderManager.h
src/engine/resource/: ResourceManager.cpp  ResourceManager.h  Texture.h
src/engine/scene/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshLine.cpp  MeshLine.h  Model.h  ModelLine.cpp  ModelLine.h  ModelPlane.cpp  ModelPlane.h  ModelSky.h  SceneManager.cpp  SceneManager.h  Sky.h  SunLight.h  Transform.cpp  Transform.h
src/engine/scripts/: ScriptableObject.h
src/engine/shader/: Shader.cpp  Shader.h
src/engine/window/: WindowManager.cpp  WindowManager.h
src/game/: CameraMovement.h  GameManager.h  Terrain.h
tests/: CMakeLists.txt  ComponentManagerTest.cpp
